# prax

./: .dockerignore  .env-example  .env-proxy-example  .gitguardian.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.lite  Makefile  README.md  ROADMAP.md  app.py  config.py  conversations.db.legacy-backup  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.lite.yml  docker-compose.yml  harness_results.json  pyproject.toml  release-please-config.json  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  fresh-install.yml  release.yml
docs/: IDEAS_BACKLOG.md  NEXT_SESSION_SPACES.md  PIPELINE_EVOLUTION_TODO.md  SELF_MODIFY_PLAN.md  VERIFICATION_LEDGER.md  library.md
docs/agents/: README.md  checkpointing.md  delegation.md  self-improvement.md  self-modification.md  self-regeneration.md
docs/architecture/: README.md  hub-and-spoke.md  interoperability.md  lang-stack.md  request-flows.md  workspace.md
docs/guides/: README.md  (+18 more)
k8s/: README.md
observability/: loki.yaml  prometheus.yaml  promtail.yaml  tempo.yaml
plans/: course-chat-widget.md
prax/: call_state.py  chatbot.py  clients.py  conversation_memory.py  convo_states.py  filter_input.py  helpers_dictionaries.py  helpers_functions.py  settings.py  sms.py  token_management.py  trace_events.py  twilio_voice_utils.py
sandbox/: Dockerfile  entrypoint.sh  start.sh  tmux-shell.sh
scripts/: ask_prax.py  check_layers.py  claude_bridge.py  entrypoint-combined.sh  entrypoint-lite.sh  entrypoint.sh  eval_gate.py  eval_suite.py  fetch_eval_datasets.py  finetune_train.py  ngrok-launch.sh  reembed_memories.py  run_coverage_harness.py  smoke_test.py  start_claude_bridge.sh  supervisord-prax.conf  teamwork-launch.sh  update_twilio_webhooks.py  watchdog-launch.sh  watchdog.py  worldmodel_lift.py
tailscale/: serve-config.json
tests/: conftest.py  test_action_policy.py  test_agent_loop.py  test_agent_tools.py  test_answer_equiv.py  test_arc3_harness.py  test_arc_agi_2.py  test_arxiv_plugin.py  test_ast_tools.py  test_autonomy.py  test_benchmark_cost.py  test_benchmark_registry.py  test_bfcl.py  test_branch_channel.py  test_browser_service.py  test_browser_spoke.py  test_browser_tools.py  test_browser_verify.py  test_check_layers.py  test_checkpoint.py  test_circuit_breaker.py  test_claim_audit.py  test_claude_code_tools.py  test_codegen_service.py  test_codegen_tools.py  test_content_spoke.py  test_context_manager.py  test_conversation_service.py  test_course_service.py  test_credential_registry.py  test_daily_briefing_e2e.py  test_data_tools.py  test_dataset_loader.py  test_decision_record_tool.py  test_deployment_info.py  test_difficulty.py  test_discord_service.py  test_earned_trust.py  test_enhanced_scanning.py  test_environment_spoke.py  (+146 more)
(+484 files in other folders)
